classDiagram
    Dish <|-- CheeseBurger
    Dish <|-- Salad
    Dish <|-- Brownie
    AllergenGluten <|.. CheeseBurger
    AllergenGluten <|.. Brownie
    AllergenNuts <|.. Brownie
    Customer *-- Order
    Customer <|.. Observer
    Customer <|.. UpdateOrderStatus
    Customer <|.. ManageObservers
    Order <|.. ManageObservers
    Order ..|> Subject
    Kitchen <|.. UpdateOrderStatus
    Dish --* Order
    OrderStatus --* Order
    OrderFactory ..|> Order
    CustomerFactory ..|> Customer
    DishFactory ..|> Dish

    class Dish {
        <<abstract>>
        +constructor(ingredients: string[])
        +showIngredients() string
        +showPrice() number
    }
    class CheeseBurger {
        +showPrice() number
    }
    class Salad {
        +showPrice() number
    }
    class Brownie {
        +showPrice() number
    }
    class AllergenGluten {
        <<interface>>
        +hasGluten() boolean
    }
    class AllergenNuts {
        <<interface>>
        +hasNuts() boolean
    }
    class DishFactory {
        +createDish(type: string, ingredients: string[]): Dish
    }

    class Customer {
        +constructor(name: string)
        +getname() string
        +addDishToOrder(dish: Dish): void
        +removeDishFromOrder(dish: Dish): void
        +getOrderTotalPrice() number
        +validateOrder(): void
        +onOrderChange(order: Order): string
    }
    class Order {
        dishes: Dish[]
        status: OrderStatusEnum
        -observers: Observer[]
        +constructor(customer: Customer)
        +addDish(dish: Dish): void
        +removeDish(dish: Dish): void
        +getTotalPrice() number
        +validateOrder(): void
        +addObserver(observer: Observer): void
        +removeObserver(observer: Observer): void
        +notifyObservers(): void
    }
    class OrderStatus {
        <<interface>>
        +status: OrderStatusEnum
    }
    class OrderFactory {
        +createOrder(customer: Customer): Order
    }
    class CustomerFactory {
        +createCustomer(name: string): Customer
    }
    class UpdateOrderStatus {
        +updateStatus(order: Order, status: OrderStatusEnum): void
    }
    class Kitchen {
        +onOrderChange(order: Order): string
        +updateOrderStatus(order: Order, status: OrderStatusEnum): void
    }
    class Observer {
        <<interface>>
        +onOrderChange(order: Order): string
    }
    class Subject {
        <<interface>>
        +notifyObservers(): void
    }
    class ManageObservers {
        <<interface>>
        +addObserver(observer: Observer): void
        +removeObserver(observer: Observer): void
    }
    class OrderStatusEnum {
        <<enumeration>>
        NonValidee
        Validee
        EnPreparation
        Prete
        Terminee
    }
    class Invoice {
        +constructor(order: Order)
        +generateInvoice(order: Order): string
        +getTotalAmount(order: Order): number
    }
    class DiscountStrategy {
        <<interface>>
        +applyDiscount(order: Order): number
    }
    class PercentageDiscount {
        +constructor(percentage: number)
        +applyDiscount(order: Order): number
    }
    class FixedAmountDiscount {
        +constructor(amount: number)
        +applyDiscount(order: Order): number
    }
    PercentageDiscount --|> DiscountStrategy
    FixedAmountDiscount --|> DiscountStrategy
    Invoice ..|> DiscountStrategy